--- a/gleam.toml
+++ b/gleam.toml
@@ -6,6 +6,7 @@ gleam_stdlib = "== 0.67.0"
 gleam_erlang = ">= 1.3.0 and < 2.0.0"
 gleam_http = ">= 4.3.0 and < 5.0.0"
 mist = ">= 5.0.3 and < 6.0.0"
+wisp = ">= 2.1.0 and < 3.0.0"
 
 [dev-dependencies]
 gleeunit = "== 1.9.0"
