--- a/gleam.toml
+++ b/gleam.toml
@@ -9,6 +9,7 @@ mist = ">= 5.0.3 and < 6.0.0"
 wisp = ">= 2.1.0 and < 3.0.0"
 radiate = ">= 1.0.0 and < 2.0.0"
 gleam_json = ">= 3.1.0 and < 4.0.0"
+envoy = ">= 1.1.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = "== 1.9.0"
