--- a/mise.toml
+++ b/mise.toml
@@ -2,3 +2,7 @@
 erlang = { version = '28.2', backend = "core" }
 rebar = { version = "3.25.1" }
 gleam = { version = "1.13.0", backend = "aqua" }
+
+[tasks]
+dev = "gleam run -m backend_reloader"
+prod = "gleam run -m backend"
